Fixed review component design on mobile

--- a/01_creating_layout/styles/css/main.css
+++ b/01_creating_layout/styles/css/main.css
@@ -438,13 +438,20 @@
   flex: 8; }
   .reviews__item {
     display: flex;
-    align-items: flex-start; }
+    flex-direction: column;
+    align-items: center;
+    text-align: center; }
+    .reviews__item .button {
+      margin: 0 auto; }
     .reviews__item:not(:last-child) {
       margin-bottom: 60px; }
   .reviews__title {
     font-family: 'SourceSansPro-Bold';
     font-size: 1.25em;
-    color: #003d48; }
+    color: #003d48;
+    margin-top: 20px;
+    text-align: center;
+    width: 100%; }
   .reviews__image {
     display: flex;
     flex-grow: 0;
@@ -460,6 +467,16 @@
   .reviews__text {
     color: #8c9193;
     margin: 30px 0; }
+
+@media (min-width: 890px) {
+  .reviews__item {
+    flex-direction: row;
+    text-align: left; }
+  .reviews .button {
+    margin: 0; }
+  .reviews__title {
+    margin-top: 0;
+    text-align: left; } }
 
 .tabs {
   flex: 4; }
