--- a/01_creating_layout/styles/sass/reviews/reviews.scss
+++ b/01_creating_layout/styles/sass/reviews/reviews.scss
@@ -5,7 +5,13 @@
 
   &__item {
     display: flex;
-    align-items: flex-start;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+
+    .button {
+      margin: 0 auto;
+    }
 
     &:not(:last-child) {
       margin-bottom: 60px;
@@ -16,6 +22,9 @@
     font-family: 'SourceSansPro-Bold';
     font-size: 1.25em;
     color: $very-dark-cyan;
+    margin-top: 20px;
+    text-align: center;
+    width: 100%;
   }
 
   &__image {
@@ -39,5 +48,24 @@
   &__text {
     color: $asphalt-gray;
     margin: 30px 0;
+  }
+}
+
+@media (min-width: 890px) {
+  .reviews {
+    
+    &__item {
+      flex-direction: row;
+      text-align: left;
+    }
+
+    .button {
+      margin: 0;
+    }
+    
+    &__title {
+      margin-top: 0;
+      text-align: left;
+    }
   }
 }
